-fixed task data field being called permission id instead of task id -the third party cookie warning will now be hidden when the external links page is too small -fixed some pages not properly filling available space

--- a/styling/styles-pages.css
+++ b/styling/styles-pages.css
@@ -211,6 +211,7 @@
 {
 	transition-property: max-height;
 	transition-duration: var(--trans-dur-off-slow);
+	transition-delay: 0.2s;
 	transition-timing-function: ease-in-out;
 }
 .page-panel.expanding-panel:hover
